合并过滤去重